fix loading overflow

--- a/app/assets/styles/pages/sample-app.scss
+++ b/app/assets/styles/pages/sample-app.scss
@@ -6,5 +6,13 @@
     #SampleAppWrapper {
         width: 100%;
         height: 100%;
+        .pre-app-loading{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            color: rgb(13, 113, 228);
+        }
     }
 }
